[FTR] - :sparkles: Criação de usuários

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,19 @@
-#server.port=8080
+# #server.port=8080
+# server.servlet.context-path=/api
+
+# # datasource PostgreSQL
+# spring.datasource.driver-class-name=org.postgresql.Driver
+# spring.datasource.url = jdbc:postgresql://localhost:5432/testeDB
+# spring.datasource.username=postgres
+# spring.datasource.password=admin
+
+# # jpa
+# spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+# spring.jpa.hibernate.ddl-auto=update
+# spring.jpa.properties.hibernate.show_sql=true
+# spring.jpa.properties.hibernate.format_sql=true
+
+server.port=5432
 server.servlet.context-path=/api
 
 # datasource PostgreSQL
@@ -12,4 +27,3 @@ spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.format_sql=true
-
